--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,9 @@
     <string name="tv_choix_ia">choix IA</string>
     <string name="et_ia_deck">IA deck</string>
     <string name="et_choix_lifepoint">start lifepoint</string>
+    <string name="tv_nom_carte">name</string>
+    <string name="tv_niv_carte" >level</string>
+    <string name="tv_image_carte">image</string>
+    <string name="tv_atk_carte">atk</string>
+    <string name="tv_def_carte">def</string>
 </resources>
