--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,6 +46,6 @@
     <string name="bt_endPhase">EP</string>
     <string name="nav_home">Home</string>
     <string name="nav_party">Play</string>
-    <string name="nav_setting">Setting</string>
-    <string name="nav_deck">Deck</string>
+    <string name="nav_setting">Settings</string>
+    <string name="nav_deck">Decks</string>
 </resources>
