--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,14 +20,10 @@
     <string name="title_form_createDeck">Form Create Deck</string>
     <string name="bt_addDeck">Add this Deck</string>
     <string name="title_profile">Profile Settings</string>
-    <string name="et_pseudo">pseudo</string>
-    <string name="et_new_password">nouveau mot de passe</string>
     <string name="bt_profile">Profile</string>
-    <string name="title_deckbuilder">" Choix des cartes du deck"</string>
-    <string name="title_conf_duel">Paramètre du duel</string>
     <string name="bt_start_duel">It\'s time to Duel !</string>
     <string name="tv_deck">Your deck</string>
-    <string name="tv_choix_ia">choix IA</string>
+    <string name="tv_choix_ia">Choice IA</string>
     <string name="et_ia_deck">IA deck</string>
     <string name="et_choix_lifepoint">start lifepoint</string>
     <string name="tv_nom_carte">name</string>
@@ -48,4 +44,13 @@
     <string name="nav_party">Duel</string>
     <string name="nav_setting">Settings</string>
     <string name="nav_deck">Decks</string>
+    <string name="title_deckbuilder">Deck Builder</string>
+    <string name="title_conf_duel">duel settings</string>
+    <string name="et_new_password">new password</string>
+    <string name="et_pseudo">username</string>
+    <string name="alert_Supp_yes">Yes</string>
+    <string name="alert_Supp_no">No</string>
+    <string name="alert_Supp_message">Are you sure to delete this deck ?</string>
+    <string name="titile_login" >Login</string>
+    <string name="title_signup">sign up</string>
 </resources>
