Mise en place de la victoire defaite Pioche

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -54,4 +54,6 @@
     <string name="alert_Supp_message">Êtes vous sûr de supprimer ce deck ?</string>
     <string name="titile_login">Connexion</string>
     <string name="title_signup">Inscription</string>
+    <string name="labelDefeat">Défaite</string>
+    <string name="labelVictory">Victoire</string>
 </resources>
