invocation normale non fini

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,4 +55,5 @@
     <string name="title_signup">sign up</string>
     <string name="labelVictory">Victory</string>
     <string name="labelDefeat">Defeat</string>
+    <string name="bt_invocation">invocation</string>
 </resources>
