--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -56,4 +56,5 @@
     <string name="title_signup">Inscription</string>
     <string name="labelDefeat">Défaite</string>
     <string name="labelVictory">Victoire</string>
+    <string name="bt_invocation">invocation</string>
 </resources>
