--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -57,4 +57,5 @@
     <string name="labelDefeat">Défaite</string>
     <string name="labelVictory">Victoire</string>
     <string name="bt_invocation">invocation</string>
+    <string name="bt_poser">poser</string>
 </resources>
