add sort in list of cards

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,4 +57,5 @@
     <string name="labelDefeat">Defeat</string>
     <string name="bt_invocation">invocation</string>
     <string name="bt_poser">poser</string>
+    <string name="sort">sort</string>
 </resources>
